🔧 Fix: Remove large JAR files and update .gitignore
- ❌ Removed metabase.jar (368MB) - too large for GitHub
- ❌ Removed plugin JAR files (68MB) - too large for GitHub
- ✅ Updated .gitignore to exclude JAR files
- ✅ Added instructions for manual download of JAR files

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@ config.env
 *.sqlite3
 metabase.db.*
 
+# Archivos JAR grandes
+*.jar
+metabase.jar
+plugins/*.jar
+
 # Archivos temporales
 *.tmp
 *.temp
